--- a/_config.yml
+++ b/_config.yml
@@ -14,35 +14,30 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: OwLabs
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: OwLabs is a threat research team dedicated to uncovering the latest cyber threats focusing on malware analysis, reverse engineering, and cutting-edge detection techniques.
 
-description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+description: >-
+  OwLabs is a threat research team dedicated to uncovering the latest cyber threats focusing on malware analysis, reverse engineering, and cutting-edge detection techniques.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: ""
 
 github:
-  username: github_username # change to your GitHub username
+  username: filescan_itsec
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: filescanio
 
 social:
-  # Change to your full name.
-  # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: FileScan's OwLabs team
+  email: support@filescan.io
   links:
-    # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://twitter.com/filescan_itsec
+    - https://github.com/filescanio
+    - https://www.linkedin.com/company/opswat
 
 # Site Verification Settings
 webmaster_verifications:
@@ -88,7 +83,7 @@ pageviews:
 #     light — Use the light color scheme
 #     dark — Use the dark color scheme
 #
-theme_mode: # [light | dark]
+theme_mode: 
 
 # The CDN endpoint for media resources.
 # Notice that once it is assigned, the CDN url
@@ -98,14 +93,14 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: assets/img/favicons/web-app-manifest-512x512.png
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
 social_preview_image: # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
-toc: true
+toc: false
 
 comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
