--- a/_config.yml
+++ b/_config.yml
@@ -218,3 +218,6 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
+head:
+  custom_css: /assets/css/custom.css
