--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >-
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://ntwritecode.github.io"
 
 github:
   username: filescan_itsec
@@ -145,7 +145,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+baseurl: "ntwritecode.github.io"
 
 # ------------ The following options are not recommended to be modified ------------------
 
